<resources>
    <string name="app_name">My Application</string>
    <string name="google">Google</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="perfil">Perfil</string>
    <string name="registrar_ticket">Registrar Ticket</string>
    <string name="historial">Historial</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="nombre">Nombre</string>
    <string name="foto">Foto</string>
    <string name="seleccionar_foto">Seleccionar foto</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="fecha_del_ticket">Fecha del ticket</string>
    <string name="monto_del_ticket">Monto del ticket</string>
    <string name="foto_del_ticket">Foto del ticket</string>
    <string name="guardar_ticket">Guardar ticket</string>
    <string name="fecha">Fecha</string>
    <string name="monto">Monto</string>

    <string name="TYPEDISPLAY">TYPE_DISPLAY</string>
    <string name="MODE_REGISTER">REGISTER</string>
    <string name="MODE_DISPLAY">DISPLAY</string>
    <string name="MODE_EDIT">EDIT</string>
    <string name="URL_IMG">URL_IMG</string>
    <string name="ID_TICKET">ID_TICKET</string>
    <string name="TICKET_DATE">TICKET_DATE</string>
    <string name="TICKET_AMOUNT">TICKET_AMOUNT</string>
    <string name="TICKET_CREATED">TICKET_CREATED</string>
    <string name="TICKET_PATH">TICKET_PATH</string>
    <string name="cargando">Cargando...</string>

</resources>